Fixed issues on mobile and improved the default picture for concerts

--- a/www/dominante-wp/public_html/wp-content/themes/dominante/style.css
+++ b/www/dominante-wp/public_html/wp-content/themes/dominante/style.css
@@ -799,6 +799,7 @@ h1.entry-title {
   margin-top: 1em;
   margin-bottom: 1.5em;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .content-area .wp-block-column h2 {
@@ -1051,11 +1052,15 @@ object {
   text-align: left;
 }
 .dominante-block-type-concert .dominante-block-photo {
-  width: 180px;
-  height: 180px;
+  width: 200px;
+  height: 200px;
   padding: 0;
-  margin-right: 20px;
+  margin-right: 10px;
   background-color: #7b1e32;
+  color: white;
+  text-align: center;
+  font-size: 61px;
+  font-family: "Raleway";
 }
 
 /* TODO: Kannattaisiko kuva siirtää tässä block-text-blockin yläpuolelle (pienillä ruuduilla)? */
@@ -1064,8 +1069,10 @@ object {
     padding-right: 10px;
     width: 140px;
   }
-  .header-image-container {
-    border-bottom: 20px;
+  .dominante-block-type-concert .dominante-block-photo {
+    width: 130px;
+    height: 130px;
+    font-size: 40px;
   }
 }
 
@@ -1086,6 +1093,13 @@ object {
   }
   .content-area h3 {
     text-align: center;
+  }
+  .dominante-block-type-concert .dominante-block-photo {
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 90px;
   }
 }
 
